# timopro

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/angebote-fetch/: SKILL.md
.claude/skills/angebote-kategorisieren/: SKILL.md
.github/workflows/: tests.yml
src/angebote/: __init__.py  cli.py  config.py  fehler.py  fetch.py  kategorisieren.py  modell.py  modellauswahl.py  modelle.py  produktcache.py  speicher.py  uebersicht.py  web.py
src/angebote/quellen/: __init__.py  basis.py  marktguru.py
src/angebote/web_static/: index.html
tests/: fakes.py  test_fetch_abbruch_ort.py  test_fetch_kein_auffuellen.py  test_kategorisieren_cache.py  test_kategorisieren_geschlossene_liste.py  test_kategorisieren_integritaet.py  test_kategorisieren_unsicherheit.py  test_kategorisierer_anbieter.py  test_korrektur.py  test_modelle.py  test_produktcache.py  test_schnitt.py  test_speicher.py  test_ui_persistenz.py  test_web.py
