[project]
name = "angebote-uebersicht"
version = "0.1.0"
description = "Ortskonkrete, händlerübergreifende Angebots-Übersicht nach Produktgruppen"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
